tests/paczka1/fuzzy1/26997995.err
Error in line 1: vWwHhofPA A415 70,67
Error in line 7: AFE S586 46,0
Error in line 4: A712 A712 24,8
Error in line 14: zTf5M8Ml A712 16,1
Error in line 20: AFE A415 44,9
Error in line 33: TXy A415 70,8
